--- a/.github/workflows/buildApp.yml
+++ b/.github/workflows/buildApp.yml
@@ -28,4 +28,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm ci, build and test
         run: |
-          npm run build --if-present 
+          npm run build
