--- a/.github/workflows/vercelDeployment.yml
+++ b/.github/workflows/vercelDeployment.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Building app
+        run: "npm run build"
+
       - name: Install Vercel CLI
         run: npm install --global vercel@latest
 
@@ -19,6 +23,6 @@ jobs:
 
       - name: Build Project Artifacts
         run: vercel build --prod --token=${{ secrets.VERCEL_TOKEN }}
-        
+
       - name: Deploy Project Artifacts to Vercel
         run: vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_TOKEN }}
