--- a/.github/workflows/vercelDeployment.yml
+++ b/.github/workflows/vercelDeployment.yml
@@ -5,7 +5,7 @@ env:
 on:
   push:
     branches:
-      - main
+      - hotFix/vercelDeployment
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
