--- a/.github/workflows/buildReactApp.yml
+++ b/.github/workflows/buildReactApp.yml
@@ -2,7 +2,7 @@ name: CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ hotFix/vercelDeployment ]
   pull_request:
     branches: [ main ]
 
