added Blog name on login page

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_GOOGLE_AUTH_CLIENT_ID=705664167383-89vbo0ovcua26fp563cl0ekgqj31c4on.apps.googleusercontent.com
+REACT_APP_GOOGLE_AUTH_CLIENT_ID="705664167383-n48i8kccvmeoa8u8n5d92net00lnsaqa.apps.googleusercontent.com"
