--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
+    "bootstrap": "^5.3.1",
+    "cdbreact": "^1.5.18",
     "dotenv-flow": "^3.2.0",
     "jwt-decode": "^3.1.2",
+    "mdb-react-ui-kit": "^6.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.10.1",
