--- a/package.json
+++ b/package.json
@@ -13,17 +13,18 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "cdbreact": "^1.5.18",
     "dotenv-flow": "^3.2.0",
+    "googleapis": "^126.0.1",
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.1.0",
-    "mongod": "^2.0.0",
-    "mongodb": "^5.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-google-one-tap-login": "^0.1.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
