--- a/package.json
+++ b/package.json
@@ -1,38 +1,24 @@
 {
-  "name": "front",
+  "name": "blog_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@react-oauth/google": "^0.11.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/react": "^18.2.17",
-    "@types/react-dom": "^18.2.7",
-    "axios": "^1.5.0",
-    "bootstrap": "^5.3.1",
-    "cdbreact": "^1.5.18",
-    "dotenv-flow": "^3.2.0",
-    "googleapis": "^126.0.1",
-    "jwt-decode": "^3.1.2",
-    "mdb-react-ui-kit": "^6.1.0",
+    "@types/node": "^16.18.75",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-dotenv": "^0.1.3",
-    "react-google-one-tap-login": "^0.1.1",
-    "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-dotenv && react-scripts start",
-    "build": "react-dotenv && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -55,15 +41,8 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^16.18.39",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.5"
-  },
-  "react-dotenv": {
-    "whitelist": [
-      "API_URL"
-    ]
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
